--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "tabWidth": 2
 }
